2007-06-03  Inge Wallin  <inge@lysator.liu.se>

	Fix compile error
	* src/plugins/marblewidget/MarbleWidgetPlugin.cpp (createWidget):
	Use MarbleModel instead of KAtlasGlobe.

2007-06-02  Inge Wallin  <inge@lysator.liu.se>

	Improve integration between MarbleControlBox and MarbleWidget
	* src/MarbleControlBox.h (m_widget): new member
	* src/MarbleControlBox.cpp (addMarbleWidget): New method
	* src/katlascontrol.cpp (KAtlasControl): use addMarbleWidget
	instead of connecting signals/slots ourselves

	Make a standalone widget that creates its own model
	* src/lib/MarbleWidget.cpp (MarbleWidget(parent)): new constructor
	(construct): New method
	* src/katlascontrol.cpp (KAtlasControl): Use new constructor for
	MarbleWidget
	* src/katlascontrol.h (KAtlasControl::m_marbleModel): removed

	Rename KatlasGlobe -> MarbleModel
	* src/lib/MarbleModel.h (): renamed from katlasglobe.h
	* src/lib/MarbleModel.cpp (): renamed from katlasglobe.cpp
	* src/katlascontrol.{h,cpp}: use new name
	* src/lib/MarbleWidget.{h,cpp}: use new name
	* src/lib/katlasviewpopupmenu.{h,cpp}: use new name
	* src/lib/katlasviewinputhandler.{h,cpp}: use new name

	Show zoom level in the status bar
	* src/KdeMainWindow.cpp (showZoom): new slot
	(createStatusBar): create zoom label
	(MainWindow): Show initial zoom level
	* src/katlascontrol.h (marbleWidget): New method
	* src/lib/MarbleWidget.h (zoom): New method.
	
2007-05-31  Inge Wallin  <inge@lysator.liu.se>

	Remove worthless APIDOX
	src/httpfetchfile.h		src/katlaswindrose.h
	src/placemarkinfodialog.h	src/katlascontrol.h
	src/placemarkmodel.h		src/katlasviewpopupmenu.h
	src/katlasmapscale.h		src/katlasviewinputhandler.h
	src/measuretool.h		src/vectormap.h
	src/placemarkpainter.h		src/TileLoader.h
	src/tinywebbrowser.h		src/texcolorizer.h
	src/katlasaboutdialog.h		src/placemarkmanager.h
	src/HttpDownloadManager.h	src/marblecontrol.h
	src/TextureMapper.h		src/katlasflag.h
	src/vectorcomposer.h		src/GridMap.h