@@ -1,4 +1,9 @@
+2007-06-03    <ingwa@c83-252-237-22.bredband.comhem.se>
+
 2007-06-03  Inge Wallin  <inge@lysator.liu.se>
+
+	APIDOX
+	* src/lib/MarbleWidget.h: Document everything but the slots.
 
 	Fix compile error
 	* src/plugins/marblewidget/MarbleWidgetPlugin.cpp (createWidget):
